<resources>
    <string name="app_name" translatable="false">My Service Desk</string>
    <string name="calculator">CALCULATOR</string>
    <string name="map">Map</string>
    <string name="about">"The application was developed as part of the course Development of applications for Android (Junior) (05.10.2022 – 02.12.2022 г.)    "</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="InputNumber">input number</string>
    <string name="about_title"><b>About</b></string>
    <string name="bt_backSpace" translatable="false">C</string>
    <string name="bt_one" translatable="false">1</string>
    <string name="bt_two" translatable="false">2</string>
    <string name="bt_three" translatable="false">3</string>
    <string name="bt_multiplication" translatable="false">X</string>
    <string name="bt_four" translatable="false">4</string>
    <string name="bt_five" translatable="false">5</string>
    <string name="bt_six" translatable="false">6</string>
    <string name="bt_division" translatable="false">/</string>
    <string name="bt_seven" translatable="false">7</string>
    <string name="bt_eight" translatable="false">8</string>
    <string name="bt_nine" translatable="false">9</string>
    <string name="bt_summa" translatable="false">+</string>
    <string name="bt_dot" translatable="false">.</string>
    <string name="bt_zero" translatable="false">0</string>
    <string name="bt_result" translatable="false">=</string>
    <string name="bt_difference" translatable="false">-</string>
    <string name="mes_longExpression">too long expression</string>
    <string name="mes_empty">input line is empty</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="list">List</string>
    <string name="add_deal">Add deal</string>
    <string name="add">Add</string>
    <string name="Info">Info</string>
    <string name="Login" translatable="false">MY_LOGIN</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">log in</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="address">address</string>
    <string name="employeeLastName">employee LastName</string>
    <string name="employeeFirstName">employee FirstName</string>
    <string name="dateInCome">receipt date</string>
    <string name="dateExecution">date execution</string>
    <string name="serviceDescription">service description</string>
    <string name="serviceCategory">service category</string>
    <string name="service">service</string>
    <string name="clientLastName">client LastName</string>
    <string name="clientFirstName">client FirstName</string>
    <string name="serviceStatus">service status</string>
    <string name="idService">NO_Service</string>
    <string name="InputNewUser">Input new user</string>
    <string name="minZoom">min zoom</string>
    <string name="maxZoom">max zoom</string>
    <string name="WrongLoginOrPassword">Wrong Login Or Password</string>

</resources>