<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CMainActivity">

    <Button
        android:id="@+id/close"
        android:background="@drawable/btn_shape_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/buxtonsketch"
        android:textSize="@dimen/SizeFontButton"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/mistral"
        android:text="@string/about_title"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/buxtonsketch"
        android:text="@string/about"
        android:textColor="#000000"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/aboutTitle"
        app:layout_constraintStart_toStartOf="@+id/aboutTitle"
        app:layout_constraintTop_toBottomOf="@+id/aboutTitle"


        />



</androidx.constraintlayout.widget.ConstraintLayout>